# cabidl

./: CLAUDE.md  LICENSE  README.md  cabidl-boundary.schema.json  cabidl-component.schema.json  cabidl-system.schema.json  example.md  specification.md
.claude/commands/: release-cli.md
.claude/skills/cabidl/: SKILL.md
.github/workflows/: ci.yml  release.yml
cabidl-cli/: Cargo.toml  skill.md
cabidl-cli/ai-provider/: Cargo.toml
cabidl-cli/boundaries/diagram-provider/: Cargo.toml
cabidl-cli/boundaries/diagram-provider/src/: lib.rs
cabidl-cli/boundaries/diagram/src/: lib.rs
cabidl-cli/boundaries/filesystem/: Cargo.toml
cabidl-cli/boundaries/init/src/: lib.rs
cabidl-cli/boundaries/parser/src/: boundary.rs  component.rs  validation_error.rs
cabidl-cli/boundaries/wiring/: Cargo.toml
cabidl-cli/cabidl/: ai_provider_trait.rs  cabidl.md  clap.yaml  diagram_provider_trait.rs  diagram_trait.rs  filesystem_trait.rs  init_trait.rs  parser_trait.rs  wiring_trait.rs
cabidl-cli/cabidl/boundaries/: ai-provider.md  cli-interface.md  diagram-provider.md  diagram.md  filesystem.md  init.md  parser.md  wiring.md
cabidl-cli/cabidl/components/: claude-code.md  cli.md  diagram.md  filesystem-impl.md  graphviz.md  init-impl.md  mermaid.md  parser.md  wiring-impl.md
cabidl-cli/claude-code/: Cargo.toml
cabidl-cli/claude-code/src/: lib.rs
cabidl-cli/cli/: Cargo.toml
cabidl-cli/cli/src/: main.rs
cabidl-cli/components/claude-code/: Cargo.toml
cabidl-cli/components/cli/: Cargo.toml
cabidl-cli/components/cli/src/: main.rs
cabidl-cli/components/diagram-impl/: Cargo.toml
cabidl-cli/components/diagram-impl/src/: lib.rs
cabidl-cli/components/diagram-impl/tests/: diagram_tests.rs
cabidl-cli/components/filesystem-impl/: Cargo.toml
cabidl-cli/components/filesystem-impl/src/: lib.rs
cabidl-cli/components/graphviz/: Cargo.toml
cabidl-cli/components/graphviz/src/: lib.rs
cabidl-cli/components/init-impl/: Cargo.toml  build.rs
cabidl-cli/components/mermaid/: Cargo.toml
cabidl-cli/components/mermaid/src/: lib.rs
cabidl-cli/components/parser-impl/: Cargo.toml
cabidl-cli/components/parser-impl/src/: cabidl_parser_impl.rs  lib.rs  parser.rs
cabidl-cli/components/parser-impl/tests/: validation_tests.rs
cabidl-cli/components/wiring-impl/: Cargo.toml
cabidl-cli/components/wiring-impl/src/: lib.rs
cabidl-cli/diagram/: Cargo.toml
cabidl-cli/diagram-impl/: Cargo.toml
cabidl-cli/diagram-impl/src/: lib.rs
cabidl-cli/diagram-impl/tests/: diagram_tests.rs
cabidl-cli/diagram-provider/: Cargo.toml
cabidl-cli/filesystem/: Cargo.toml
cabidl-cli/filesystem-impl/: Cargo.toml
cabidl-cli/filesystem-impl/src/: in_memory_filesystem.rs  real_filesystem.rs
cabidl-cli/filesystem/src/: lib.rs
cabidl-cli/graphviz/: Cargo.toml
cabidl-cli/graphviz/src/: lib.rs
cabidl-cli/init/: Cargo.toml
cabidl-cli/init-impl/: Cargo.toml  build.rs
cabidl-cli/init-impl/src/: lib.rs
cabidl-cli/parser/: Cargo.toml
cabidl-cli/parser-impl/: Cargo.toml
cabidl-cli/parser-impl/src/: cabidl_parser_impl.rs  resolver.rs  validator.rs  yaml_types.rs
cabidl-cli/parser/src/: lib.rs  parser_trait.rs  system.rs
cabidl-cli/src/: filesystem.rs  lib.rs  main.rs  parser.rs  types.rs  validator.rs
cabidl-cli/templates/simple-ls/: template.yaml
cabidl-cli/templates/simple-ls/cabidl/: cabidl.md
cabidl-cli/templates/simple-ls/cabidl/boundaries/: clap.yaml  cli-interface.md  filesystem.md  filesystem_trait.rs
cabidl-cli/templates/simple-ls/cabidl/components/: cli.md  filesystem-impl.md
cabidl-cli/tests/: validation_tests.rs
examples/simple-ls/: simple-ls.md
