[workspace.package]
version = "0.4.0"

[workspace]
members = [
    "ai-provider",
    "filesystem",
    "init",
    "parser",
    "filesystem-impl",
    "init-impl",
    "parser-impl",
    "diagram-provider",
    "diagram",
    "diagram-impl",
    "graphviz",
    "claude-code",
    "cli",
]
resolver = "2"
