[workspace.package]
version = "0.6.0"

[workspace]
members = [
    "boundaries/ai-provider",
    "boundaries/diagram",
    "boundaries/diagram-provider",
    "boundaries/filesystem",
    "boundaries/init",
    "boundaries/parser",
    "boundaries/wiring",
    "components/claude-code",
    "components/cli",
    "components/diagram-impl",
    "components/filesystem-impl",
    "components/graphviz",
    "components/mermaid",
    "components/init-impl",
    "components/parser-impl",
    "components/wiring-impl",
]
resolver = "2"
