[package]
name = "cabidl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cabidl"
path = "src/main.rs"

[dependencies]
cabidl-parser = { path = "../parser" }
cabidl-parser-impl = { path = "../parser-impl" }
cabidl-filesystem-impl = { path = "../filesystem-impl" }
cabidl-diagram = { path = "../diagram" }
cabidl-diagram-impl = { path = "../diagram-impl" }
cabidl-graphviz = { path = "../graphviz" }
clap = { version = "4", features = ["derive"] }
