[package]
name = "cabidl"
version.workspace = true
edition = "2024"

[[bin]]
name = "cabidl"
path = "src/main.rs"

[dependencies]
cabidl-parser = { path = "../parser" }
cabidl-parser-impl = { path = "../parser-impl" }
cabidl-filesystem-impl = { path = "../filesystem-impl" }
cabidl-diagram = { path = "../diagram" }
cabidl-diagram-impl = { path = "../diagram-impl" }
cabidl-graphviz = { path = "../graphviz" }
cabidl-ai-provider = { path = "../ai-provider" }
cabidl-claude-code = { path = "../claude-code" }
cabidl-init = { path = "../init" }
cabidl-init-impl = { path = "../init-impl" }
clap = { version = "4", features = ["derive"] }
