[package]
name = "cabidl-diagram-impl"
version = "1.0.0"
edition = "2024"

[dependencies]
cabidl-diagram = { path = "../diagram" }
cabidl-diagram-provider = { path = "../diagram-provider" }
cabidl-filesystem = { path = "../filesystem" }
cabidl-parser = { path = "../parser" }

[dev-dependencies]
cabidl-filesystem-impl = { path = "../filesystem-impl" }
cabidl-graphviz = { path = "../graphviz" }
