[package]
name = "cabidl-parser-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
cabidl-parser = { path = "../parser" }
cabidl-filesystem = { path = "../filesystem" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
cabidl-filesystem-impl = { path = "../filesystem-impl" }
