[package]
name = "cabidl-wiring-impl"
version.workspace = true
edition = "2024"

[dependencies]
cabidl-wiring = { path = "../../boundaries/wiring" }
cabidl-parser = { path = "../../boundaries/parser" }
cabidl-parser-impl = { path = "../parser-impl" }
cabidl-filesystem = { path = "../../boundaries/filesystem" }
cabidl-filesystem-impl = { path = "../filesystem-impl" }
cabidl-diagram = { path = "../../boundaries/diagram" }
cabidl-diagram-impl = { path = "../diagram-impl" }
cabidl-diagram-provider = { path = "../../boundaries/diagram-provider" }
cabidl-graphviz = { path = "../graphviz" }
cabidl-ai-provider = { path = "../../boundaries/ai-provider" }
cabidl-claude-code = { path = "../claude-code" }
cabidl-init = { path = "../../boundaries/init" }
cabidl-init-impl = { path = "../init-impl" }
